--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,154 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #48484a;
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+}
+
+.App {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 150px auto 100px;
+  justify-content: center;
+  align-items: center;
+  color: #48484a;
+  text-align: center;
+}
+
+.header {
+  align-self: end;
+}
+.header h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.header p {
+  font-size: 1.25rem;
+}
+
+.weather-container {
+  align-self: start;
+}
+
+.select-city {
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  height: 40px;
+}
+
+.select-city > div > button.btn-secondary {
+  width: 200px;
+  color: #48484a;
+  outline: none;
+  transition: all 0.3s ease;
+
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.select-city > div > button.btn-secondary:hover,
+.select-city > div > button.btn-secondary:focus,
+.select-city > div > button.btn-secondary:active {
+  transform: scale(1.1);
+  background-color: inherit;
+  color: inherit;
+  border: inherit;
+  outline: inherit;
+}
+
+.select-city > div > div {
+  top: auto;
+  height: 300px;
+  min-width: 200px;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+}
+
+.weather-cards {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(7, auto);
+  gap: 0.75rem;
+  justify-content: start;
+  align-items: center;
+  align-self: center;
+  margin: auto;
+  max-width: 1200px;
+}
+
+.weather-card {
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+  width: 125px;
+
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.weather-card:first-child {
+  width: 135px;
+  height: 192px;
+
+  background: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.today {
+  background-color: azure;
+  border: 1px solid #999;
+}
+
+.weather-icon img {
+  max-height: 100px;
+}
+
+.weather-temp {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.temp-max {
+  font-weight: bold;
+}
+
+.fa-github {
+  color: #ec6e4c;
+}
+
+@media (max-width: 992px) {
+  .weather-cards {
+    grid-template-columns: repeat(4, auto);
+  }
+}
+
+@media (max-width: 600px) {
+  .weather-cards {
+    grid-template-columns: repeat(3, auto);
+    justify-content: center;
+  }
 }
